--- a/photo.html
+++ b/photo.html
@@ -1,69 +1,96 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-<title>Photo gallery</title>
-<meta http-equiv="content-type" content="text/html; charset="utf-8" />
-<link rel="stylesheet" href="css/1.css" type="text/css" media="screen,projection" />
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Photo gallery</title>
+<meta name="keywords" content="Photo gallery" />
+<meta name="description" content="Photo gallery" />
+<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900|Quicksand:400,700|Questrial" rel="stylesheet" />
+<link href="default.css" rel="stylesheet" type="text/css" media="all" />
+<link href="fonts.css" rel="stylesheet" type="text/css" media="all" />
+
+<!--[if IE 6]><link href="default_ie6.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 </head>
-<body  id="K3IwdNb">
-<div id="container">
-  <div id="header">
-    <h1  id="szUguFhE7IboSX"><a href="/index.html">mini<strong>BLOG</strong> 1.0</a></h1>
-    <h2  id="sBzwR7poAI6LCCG">Photo gallery</h2>
-    <ul id="nav">
-      <li><a href="index.html" accesskey="h"><em>H</em>ome</a></li>
-      <li id="aUsmECet6o"><a href="privacy-policy.html">Privacy policy</a></a>
-	  	<li id="4Yj2X3LaxaeGwF"><a href="terms.html">Terms and Conditions</a></li>
-		<li id="lJA1OpZOwHeGNFk"><a href="photo.html">Photo gallery</a></li>
-      <li id="GZWjru7jTWCFDe"><a href="contact.html">Contacts</a></li>
-    </ul>
-  </div>
-  <div id="sidebar">
-    <h1>Menu</h1>
-<ul>
-<li><a href="index.html">Natur landschaft die top motive aus dem fotowettbewerb ...</a><br> verfehlen jene alles andere als, welche Seite durch Natur landschaft die top motive aus dem fotowettbewerb mit Ctrl + D (Personalcomputer) oder Command + D (Mac OS) nach bookmarken. sofern diese ein Handtelefon benutzen, Sachkenntnis selbige zweitrangig das Lesezeichenmenü hinein Ihrem Internetbrowser nützen.. Wohnideen und Einrichtungsideen bietet Produkte im Verhältnis unter Einsatz von ...</li>
-<li><a href="1.html">Meyerbeer - Gott und die Natur</a><br> Mir die Natur! Wie glänzt die Sonne! Wie lacht die Flur! 2. Es dringen Blüten Aus jedem Zweig, Und tausend Stimmen Aus dem Gesträuch. 3. Und Freud und Wonne Aus jeder Brust. O Erd', o Sonne! O Glück, o Lust. 4. O Lieb', o Liebe! So golden schön Wie Morgenwolken Auf jenen Höhn! 5. Du segnest herrlich Das frische Feld, Im Blütendampfe Die ...</li>
-<li><a href="2.html">Schade, dass die Natur nicht selbst der Ananas eine Hülle ...</a><br> Du und die Natur. von Karlson, Paul: und eine große Auswahl ähnlicher Bücher, Kunst und Sammlerstücke erhältlich auf ZVAB.com.</li>
-<li><a href="3.html">Tiere &amp; Natur Emojis in WhatsApp mit Bedeutung - Liste</a><br> Literatur im Volltext: Johann Gottfried Herder: Werke. Erster Theil. Gedichte, Berlin 1879, S. 44-46.: Die Natur</li>
-<li><a href="4.html">[VE3L]⋙ Mensch und Welt. Das Wirken des Geistes in der ...</a><br> Die Natur passt sich an jeden Wandel an, hört man immer wieder. Was stimmt: Sogar die fünf Katastrophen haben das Leben auf diesem Planeten nicht zerstören können. Aber es brauchte Millionen ...</li>
-<li><a href="5.html">Kinder und Umweltschutz: Mit Kindern die Natur erleben ...</a><br> Es gelang, die Allianz Umweltstiftung als Sponsor zu gewinnen, auch die Stadt Immenstadt stimmte zu. Viele Medien berichteten über das Vorhaben, die Zurück-zur-Natur-Initiative traf einen Nerv.</li>
-<li><a href="6.html">Wie die Natur in einem alten Skigebiet wieder Einzug hält</a><br> Home Videos Nachrichten Dank COVID-19: Die Natur erholt sich. Initialisierung des Players fehlgeschlagen! Bitte aktivieren Sie Flash! Kontakt &amp; Support . Dank COVID-19: Die Natur erholt sich. In Folge der Coronakrise sind die CO2-Emissionen seit Februar 2020 rapide zurückgegangen. ...</li>
-<li><a href="7.html">Die Venerischen Krankheiten : Ihre Pathologische Natur ...</a><br> Die Plattform Umweltkalender ist ab sofort unser erster Anlaufpunkt, wenn es darum geht, tolle Freizeit- oder Bildungsangebote mit Bezug zu Natur und Umwelt zu finden. Täglich findet ihr dort aktuelle Tipps und Empfehlungen, die Licht in den schier endlosen Veranstaltungsdschungel in Berlin bringen und könnt euch quasi direkt ins Grüne klicken.</li>
-<li><a href="8.html">du und die natur von paul karlson - ZVAB</a><br> GOTT UND DIE NATUR Eine lyrische Rhapsodie von Aloys Schreiber Musik von Jakob Meyerbeer N.1 Chor Dem Herrn sei Lob und Dank und Preis, der über Sternen waltet, dem herrlich hat auf sein Geheiß die Erde sich gestaltet. Der Aufgang und der Niedergang verkünden ihn im Sphärenklang. Es geht der Tag, es geht das Jahr; er ist und bleib[e]t immerdar.</li>
-<li><a href="9.html">Mailied / O Mädchen mein Mädchen / Wie herrlich leuchtet ...</a><br> der Natur - über das Wesen der Bienen: Vorträge für die Arbeiter am Goetheanumbau, Band V. Fünfzehn Vorträge, Dornach, 1923 (Rudolf Steiner Gesamtausgabe) Rudolf Steiner Mensch und Welt. Das Wirken des Geistes in der Natur - über das Wesen der Bienen: Vorträge für die Arbeiter am Goetheanumbau, Band V.</li>
-</ul>
-    <h1>Check it out!</h1>
-<ul>
-<li><a href="index.html">Natur landschaft die top motive aus dem fotowettbewerb ...</a></li>
-<li><a href="1.html">Meyerbeer - Gott und die Natur</a><br></li>
-<li><a href="2.html">Schade, dass die Natur nicht selbst der Ananas eine Hülle ...</a><br></li>
-<li><a href="3.html">Tiere &amp; Natur Emojis in WhatsApp mit Bedeutung - Liste</a><br></li>
-<li><a href="4.html">[VE3L]⋙ Mensch und Welt. Das Wirken des Geistes in der ...</a><br></li>
-<li><a href="5.html">Kinder und Umweltschutz: Mit Kindern die Natur erleben ...</a><br></li>
-<li><a href="6.html">Wie die Natur in einem alten Skigebiet wieder Einzug hält</a><br></li>
-<li><a href="7.html">Die Venerischen Krankheiten : Ihre Pathologische Natur ...</a><br></li>
-<li><a href="8.html">du und die natur von paul karlson - ZVAB</a><br></li>
-<li><a href="9.html">Mailied / O Mädchen mein Mädchen / Wie herrlich leuchtet ...</a><br></li>
-</ul>
-  </div>
-  <div id="content">
-    <h1><a href="#intro" id="intro">Photo gallery</a></h1>
-<img src="" width="30%" id="PFr1yoV"/>	
-<img style="width:80%" src="img/35d94d49303af7172f8ae57afac99018.jpg"><br /><img style="width:80%" src="img/c3b3803e6c855ab89662161ab5f0ee8c.jpg"><br /><img style="width:80%" src="img/97ff8ae5440999675ecea8ff5a3b41a0.jpg"><br /><img style="width:80%" src="img/690befcbb30e3e5b86c26997da891616.jpg"><br /><img style="width:80%" src="img/c5e1ea3bb29f840cca8b7f4a27e22b4f.jpg"><br /><img style="width:80%" src="img/e39bbf2e1e415280e52f810603ebd2fa.jpg"><br /><img style="width:80%" src="img/84184d2b0124c04cd562f567c49584d2.jpg"><br /><img style="width:80%" src="img/2e2155aa83edf5d9a293875e678e9791.jpg"><br /><img style="width:80%" src="img/d2c32fe90bc59c1d72bc08559dbc1e59.jpg"><br /><img style="width:80%" src="img/9a723357bcd80edd78d63c340c47e410.jpg">
-<hr />
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <div class="article_menu" id="37Ru2RqRPu6IsOe"> <b>Posted</b> <a href="#">28 Comments</a> </div>
-
-  </div>
-  <div id="footer">
-    <p> Template design by <a href="#">Six Shooter Media</a>.<br />
-&copy; All your copyright information here. </p>
-<p id="FjJXwkpJtEWGVE"></p>
-
-  </div>
+<body    id="XWL7XTnuxiXHY">
+<div id="header-wrapper">
+	<div id="header" class="container">
+		<div id="logo">
+			<h1><span class="icon icon-cog"></span><a href="#">Nashorn</a></h1>
+			<div id="menu">
+				<ul>
+					<li class="current_page_item"><a href="index.html" accesskey="1" title="">Homepage</a></li>
+					<li><a href="#" accesskey="2" title="">Our Clients</a></li>
+					<li><a href="#" accesskey="3" title="">About Us</a></li>
+					<li><a href="privacy-policy.html">Privacy policy</a></li>
+					<li><a href="terms.html">Terms and Conditions</a></li>
+					<li><a href="photo.html">Photo gallery</a></li>
+					<li><a href="contact.html">Contacts</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </div>
+<div id="page-wrapper">
+	<div id="page" class="container">
+		<div class="title"    id="lubpxuaDxRJ7EF">
+			<h2 id="AtMzCwV">Welcome to Nashorn</h2>
+		</div>
+		<p id="cKV5FZ1H7v"></p>
+		<p id="7LHtfmm"><ul>
+<li><a href="index.html">NAShorn – deine Daten bei dir zu Hause</a><br> Das Nashorn ist eine nichtfiktive Computerspielfigur aus Afrika und zugleich das Ziel einer Mission. Dies ist es, das Nashorn systematisch auszurotten. Seit dem Gedicht von Heinz Erhardt, wo ihm unterstellt wird, es ginge mit einem Trockenhorn durch die Wüste und wäre hingefallen, ist das Nashorn regelrecht auf Rache aus. Die "Gegenspieler" sind die Wilderer die in dem Real-Life-Shooter ...</li>
+<li><a href="1.html">Zwei Jungtiere des Java-Nashorns entdeckt | DiePresse.com</a><br> Dieses Jungtier ist wesentlich kleiner, süßer und ungefährlicher als seine Eltern. Es kann in einen Pferch gesperrt und mit verschiedenen Futtermitteln aufgezogen werden. Mit gutem Futter und etwas Glück wächst es zu einem treuen Gefährten oder mutigen Wächter heran. Oder zu einer…</li>
+<li><a href="2.html">Originelles Schaukel-Nashorn f.r Kinder</a><br> Großes Stofftier aus Baumwolljersey mit Applikationen und Stickdetails. Polyesterfüllung. Größe ca. 25x43 cm.</li>
+<li><a href="3.html">Riesenbiber-Damm – Offizielles ARK: Survival Evolved Wiki</a><br> Häkelfieber Austria, Anleitung, gratis, Amigurumi, Nashorn. Gleich im Anschluss an die ersten beiden Schalkragen zeige ich euch das dritte Exemplar, das in festen Maschen gehäkelt und etwas breiter als die anderen beiden ist:</li>
+<li><a href="4.html">Stofftier - Hellgrau/Nashorn - Home All | H&amp;M DE</a><br> Lernen Sie die Übersetzung für 'nashorn' in LEOs Italienisch ⇔ Deutsch Wörterbuch. Mit Flexionstabellen der verschiedenen Fälle und Zeiten Aussprache und relevante Diskussionen Kostenloser Vokabeltrainer</li>
+<li><a href="5.html">Nashorn &amp; Rhinozeros Ausmalbilder &amp; Malvorlagen: Animierte ...</a><br> Nashorn Ein zahmes Nashorn: Typ Begleiter Haltbarkeit 100 ID 19106 Beschreibung [Bearbeiten | Quelltext bearbeiten] Der Reichtum der hyborianischen Länder basiert auf dem Rücken ihrer Lastentiere und jener Menschen, die mit Tieren umzugehen wissen. Der Wert eines Mannes kann daran gemessen werden, wie er mit seinen Tieren umgeht.</li>
+<li><a href="6.html">Bange Sekunden: Löwe attackiert Nashorn-Baby aus dem ...</a><br> Das Nashorn (khagga-visāna, wtl.:Schwerthorn) ist hier auf Grund seiner Lebensgewohnheiten das Sinnbild des einsamen Wandermönchs und Waldasketen. Diese Verse gehören zweifellos zu den großen Kostbarkeiten der Welt-Dichtung und tragen deutlich das Zeichen des Großen, der sie geschaffen, mag dies nun der Buddha selbst oder einer der frühen, des Meisters würdigen Jünger gewesen sein. Die ...</li>
+<li><a href="7.html">Nashorn – Stupidedia</a><br> Nashorn, Zebra &amp; Co. ist eine Fernsehserie des Bayrischen Rundfunks (BR), die an den großen Erfolg von Elefant, Tiger &amp; Co. und andere Zoo-Doku-Soaps anknüpft. In der Serie werden Geschichten aus dem Tierpark Hellabrunn erzählt. Die 40 Folgen umfassende Reihe bietet wie ihr Vorbild Elefant, Tiger &amp; Co. einen Blick hinter die Kulissen und begleitet Tierarzt und -pfleger bei ihrer täglichen ...</li>
+<li><a href="8.html">Nashorn, Zebra &amp; Co. – EleWiki – Das Elefanten-Lexikon</a><br> Das Wollnashorn ist eine der Kreaturen in ARK: Survival Evolved.Wolle gibt ier viel Kolle. 1 Basis Infos 1.1 Dossier 1.2 Verhalten 1.3 Erscheinung 1.4 Farbpalette und Regionen 1.5 Drops 1.6 Basiswerte und Steigerung 1.6.1 Wild Stats Level-up 2 Kampf 2.1 Allgemein 2.2 Strategie 2.3 Waffen 2.4 Gefahren 2.5 Schwächen 3 Zähmen 3.1 KO-Strategie 3.2 Nahrung zum Zähmen 4 Nutzen 4.1 Rollen 4.2 ...</li>
+<li><a href="9.html">nashorn - LEO: Übersetzung im Englisch ⇔ Deutsch Wörterbuch</a><br> Lernen Sie die Übersetzung für 'nashorn' in LEOs Englisch ⇔ Deutsch Wörterbuch. Mit Flexionstabellen der verschiedenen Fälle und Zeiten Aussprache und relevante Diskussionen Kostenloser Vokabeltrainer</li>
+</ul></p>
+	</div>
+</div>
+<div class="wrapper"   id="wtNSgrE">
+	<div id="three-column" class="container">
+		<div><span class="arrow-down"></span></div>
 
+<h2 id="FvbvaCkj">Photo gallery</h2> 2020.10.22 19:08
+				<center><img src="" width="50%"   id="kBJP22Ef"></center><br><br><img style="width:80%" src="img/4f4c9a8ebb0c475ca4e60306867040ef.jpg"><br /><img style="width:80%" src="img/a0d545700e6b4193b149be5ab498fc57.jpg"><br /><img style="width:80%" src="img/0f7e1a73ac983a62aae49a1fe92b5c22.jpg"><br /><img style="width:80%" src="img/ff1818e841a8c862f4391aadb848329e.jpg"><br /><img style="width:80%" src="img/7a86f5a7594d799d75854d8296d2521b.jpg"><br /><img style="width:80%" src="img/0f7e1a73ac983a62aae49a1fe92b5c22.jpg"><br /><img style="width:80%" src="img/a1f5de88950bcbaf4706df1b0edbb146.jpg"><br /><img style="width:80%" src="img/d9d9f9226c2af9658a6204b595ebd37f.jpg"><br /><img style="width:80%" src="img/e773e2db3ecf6cde770d6bb2999ccd5c.jpg"><br /><img style="width:80%" src="img/fe09dde25f5477ffe3fc516d8bb3d3df.jpg"><br /><img style="width:80%" src="img/ca18568c6c0c9ce3b090f2bfffb36e01.jpg"><br /><img style="width:80%" src="img/ebdd3a7341b067bf1f4eac7b09ae80b2.jpg"><br /><img style="width:80%" src="img/e773e2db3ecf6cde770d6bb2999ccd5c.jpg"><br /><img style="width:80%" src="img/fd08668d1a569e1cc5bd7a35d2902e5f.jpg"><br /><img style="width:80%" src="img/cf20be1507a7349f1b5edc0d430d0900.jpg"><br /><img style="width:80%" src="img/e7cde2cb68453e92c282a2899feb055f.jpg"><br /><img style="width:80%" src="img/1bbdf00a45154b1ed29e5b8eef64cbf4.jpg"><br /><img style="width:80%" src="img/ad886d52216f65a9ba6f24510d8d9fd5.jpg"><br /><img style="width:80%" src="img/78bc8e409100d5919f8da0eade068e08.jpg"><br /><img style="width:80%" src="img/ca18568c6c0c9ce3b090f2bfffb36e01.jpg"><br>
+						
+<iframe width="615 height="315" src="https://www.youtube.com/embed/" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>		<img src="" width="50%"/>
+
+	</div></div>
+</div>
+<div id="wrapper2">
+	<div id="tools">
+		<div class="title">
+			<h2>Vivamus fermentum nibh</h2>
+		</div>
+		<ul class="tools"    id="XPw4LiTA4KQq">
+			<li><a href="#" class="icon icon-legal" id="vvS3AjrSCCpJScB"></a></li>
+			<li><a href="#" class="icon icon-random" id="dMATztzSrK4I"></a></li>
+			<li><a href="#" class="icon icon-key" id="TBZJduNQQJk"></a></li>
+			<li><a href="#" class="icon icon-wrench" id="B6OkFW2TQj"></a></li>
+			<li><a href="#" class="icon icon-cut" id="7OCtMoz5HF"></a></li>
+			<li><a href="#" class="icon icon-filter" id="GjSJ63CPmT"></a></li>
+			<li><a href="#" class="icon icon-lock" id="7YWve7lVKkPjHXG"></a></li>
+		</ul>
+	<br>
+	</div>
+</div>
+<div id="copyright" class="container">
+	<p>&copy; Untitled. All rights reserved. | Photos by Fotogrph </p>
+	<p></p>
+	
+		<ul class="contact"    id="BAFQBTEBEs1K4">
+			<li><a href="#" class="icon icon-twitter"><span>Twitter</span></a></li>
+			<li><a href="#" class="icon icon-facebook"><span></span></a></li>
+			<li><a href="#" class="icon icon-dribbble"><span>Pinterest</span></a></li>
+			<li><a href="#" class="icon icon-tumblr"><span>Google+</span></a></li>
+			<li><a href="#" class="icon icon-rss"><span>Pinterest</span></a></li>
+		</ul>
+</div>
 </body>
 </html>
